# tubes2_if3270_ml

./: README.md  pyproject.toml
src/cnn/: best_model_config.json  cnn_from_scratch_testing.ipynb  cnn_keras.weights.h5  cnn_keras_final.weights.h5  cnn_keras_training.ipynb
src/cnn/from_scratch/: layers.py  model.py
src/lstm/: README_PARAMETER_FIX.md  export_notebook_data.py  lstm.ipynb  lstm_experiment_results.json  lstm_from_scratch_testing.ipynb  lstm_keras_best.weights.h5  lstm_keras_final.weights.h5  lstm_keras_training.ipynb  lstm_saved_data.pkl  save_lstm_data.py
src/lstm/from_scratch/: __init__.py  layers.py  model.py
src/rnn/: rnn_from_scratch_implementation.ipynb  rnn_keras_best.weights.h5  rnn_keras_final.weights.h5  rnn_saved_data.pkl
src/rnn/from_scratch/: layers.py  model.py
src/rnn/notebook/: rnn_experiment_results.json  rnn_from_scratch.ipynb  rnn_keras_training.ipynb
